force-app/main/default/objects/Email_List__c/Email_List__c.object-meta.xml
<CustomObject>
    <description>PGP-0005: Custom object to stores all Email List</description>
    <label>Email List</label>
    <nameField>
        <displayFormat>EN-{YYYYMMDD}{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>