force-app/main/default/objects/Email_List__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PGP-0005: Store Email List field description</description>
    <inlineHelpText>Email List Field Description</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>