force-app/main/default/objects/Email_List__c/fields/Email_List_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_List_Name__c</fullName>
    <description>PGP-0005: Store Email List Name</description>
    <inlineHelpText>Enter Email List Name</inlineHelpText>
    <label>Email List Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>