force-app/main/default/objects/Email_List__c/fields/Total_Subscriptions__c.field-meta.xml
<CustomField>
    <fullName>Total_Subscriptions__c</fullName>
    <description>PGP-0005: Total number of subscription records.</description>
    <label>Total Subscriptions</label>
    <summaryForeignKey>Email_Subscription__c.Email_List__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>